@@ -12,6 +12,10 @@
    - deraadt@cvs.openbsd.org 2002/07/04 08:12:15
      [channels.c packet.c]
      blah blah minor nothing as i read and re-read and re-read...
+   - markus@cvs.openbsd.org 2002/07/04 10:41:47
+     [key.c monitor_wrap.c ssh-dss.c ssh-rsa.c]
+     don't allocate, copy, and discard if there is not interested in the data; 
+     ok deraadt@
 
 20020705
  - (tim) [configure.ac] AIX 4.2.1 has authenticate() in libs.
@@ -1295,4 +1299,4 @@
  - (stevesk) entropy.c: typo in debug message
  - (djm) ssh-keygen -i needs seeded RNG; report from markus@
 
-$Id: ChangeLog,v 1.2343 2002/07/07 22:11:51 mouring Exp $
+$Id: ChangeLog,v 1.2344 2002/07/07 22:13:31 mouring Exp $
